fix footer columns alignment in adjusting padding for max-width 420px

--- a/styles.css
+++ b/styles.css
@@ -1861,7 +1861,7 @@ footer ul {
   footer {
     width: 100%;
     max-width: 420px;
-    padding-left: 0;
+    padding: 80px 0;
   }
 
   h1 {
